# elektronic-smart-watch

./: README.md
01.Hardware/axp2101_test/: PCB1.PcbDoc  PCB1_v2.PcbDoc  Sheet2.SchDoc  axp2101_test.PrjPcb
01.Hardware/axp2101_test/Project Outputs for axp2101_test/: Design Rule Check - PCB1.drc  Design Rule Check - PCB1.html  PCB1.1  PCB1.DRR  PCB1.EXTREP  PCB1.GBL  PCB1.GBO  PCB1.GBP  PCB1.GBS  PCB1.GD1  PCB1.GG1  PCB1.GM  PCB1.GM1  PCB1.GM15  PCB1.GM6  PCB1.GML  PCB1.GPB  PCB1.GPT  PCB1.GTL  PCB1.GTO  PCB1.GTP  PCB1.GTS  PCB1.LDP  PCB1.REP  PCB1.TXT  PCB1.apr  Status Report.Txt  axp2101_test.xlsx
01.Hardware/axp2101_test/__Previews/: Sheet2.SchDocPreview
01.Hardware/axp2101_test/gerber/: CAMtastic1.Cam  CAMtastic2.Cam  PCB1.1  PCB1.DRR  PCB1.EXTREP  PCB1.GBL  PCB1.GBO  PCB1.GBP  PCB1.GBS  PCB1.GD1  PCB1.GG1  PCB1.GM  PCB1.GM1  PCB1.GM15  PCB1.GM6  PCB1.GML  PCB1.GPB  PCB1.GPT  PCB1.GTL  PCB1.GTO  PCB1.GTP  PCB1.GTS  PCB1.LDP  PCB1.REP  PCB1.TXT  PCB1.apr  Status Report.Txt
01.Hardware/v1/: aixiaozhi.eprj
01.Hardware/v2/: BOM_Board1_Schematic1_2025-06-25.xlsx  pcbsrc.eprj
02.Firmware/source-code/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
02.Firmware/source-code/components/adapter/: CMakeLists.txt  adapter_btn.c  adapter_lcd.c
02.Firmware/source-code/components/adapter/include/: adapter_btn.h  adapter_lcd.h
02.Firmware/source-code/components/application/: CMakeLists.txt  application.c  bread_board.c
02.Firmware/source-code/components/application/include/: bread_board.h  config.h  lcd_pcb_v1.h
02.Firmware/source-code/components/cst816s/: CMakeLists.txt  cst816s.c
02.Firmware/source-code/components/cst816s/include/: cst816s.h
02.Firmware/source-code/components/cst816t/: CMakeLists.txt  cst816t.c
02.Firmware/source-code/components/decode/: CMakeLists.txt  mjpeg_frame.c  to_bmp.c
02.Firmware/source-code/components/decode/include/: img_converters.h  mjpeg_frame.h
02.Firmware/source-code/components/lvgl_port/: CMakeLists.txt  lvgl_port.c  ui_page_home.c  ui_page_lock.c  ui_page_p1.c  ui_page_p2.c  ui_page_p3.c
02.Firmware/source-code/components/lvgl_port/include/: lvgl_port.h  p1.c  ui.h
02.Firmware/source-code/components/st7789/: CMakeLists.txt  fontx.c  st7789.c
02.Firmware/source-code/components/st7789/include/: fontx.h  st7789.h
02.Firmware/source-code/main/: CMakeLists.txt  camera-code.c
02.Firmware/source-code/main/bsp/: bread_board.c
02.Firmware/source-code/main/bsp/include/: bread_board.h
02.Firmware/source-code/main/hal/: adapter_btn.c  adapter_i2s.c  adapter_lcd.c  adapter_storage.c
02.Firmware/source-code/main/hal/include/: adapter_btn.h  adapter_i2s.h  adapter_lcd.h  adapter_storage.h
02.Firmware/source-code/main/lvgl_port/: CMakeLists.txt  lvgl_port.c  ui_img_btn.c  ui_mjpeg_frame.c  ui_page_home.c  ui_page_lock.c  ui_page_p1.c  ui_page_p2.c  ui_page_p3.c  ui_video_page.c
02.Firmware/source-code/main/lvgl_port/include/: bg5.c  lvgl_port.h  ui.h
03.Fotos/: IMG_1173.heic  IMG_1174.heic  IMG_1176.heic
